@@ -286,10 +286,13 @@ JGLOBAL_LINK_PARENT_CATEGORY_LABEL="Link Parent"
 JGLOBAL_LINKED_TITLES_DESC="If set to Yes, the article title will be a link to the article."
 JGLOBAL_LINKED_TITLES_LABEL="Linked Titles"
 JGLOBAL_LIST="List"
+JGLOBAL_LIST_ALIAS="(<span>Alias</span>: %s)"
+JGLOBAL_LIST_ALIAS_NOTE="(<span>Alias</span>: %s, <span>Note</span>: %s)"
 JGLOBAL_LIST_AUTHOR_DESC="Whether to show article author in the list of articles."
 JGLOBAL_LIST_AUTHOR_LABEL="Show Author in List"
 JGLOBAL_LIST_HITS_DESC="Whether to show article hits in the list of articles."
 JGLOBAL_LIST_HITS_LABEL="Show Hits in List"
+JGLOBAL_LIST_NOTE="(<span>Note</span>: %s)"
 JGLOBAL_MAXIMUM_CATEGORY_LEVELS_DESC="The maximum number of subcategory levels to include in the list or blog. Used when Max Levels is selected. For example, a value of 1 means only include immediate subcategories. A value of 2 means also include sub-subcategories."
 JGLOBAL_MAXIMUM_CATEGORY_LEVELS_LABEL="Maximum Subcategory Levels"
 JGLOBAL_MENUS_LAYOUT_INTEGRATION_OPTIONS_LABEL="Integration Options"
